--- a/TrainStationManagement/Views/Users/Index.cshtml
+++ b/TrainStationManagement/Views/Users/Index.cshtml
@@ -9,16 +9,16 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table table-striped table-dark">
-    <thead>
+<table class="table table-hover table-striped table-light">
+    <thead class="custom-thead">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.UserName)
+                User Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Password)
+                Password
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -30,7 +30,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
-            <td>
+            <td >
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
