--- a/TrainStationManagement/Views/Home/TrainStationsView.cshtml
+++ b/TrainStationManagement/Views/Home/TrainStationsView.cshtml
@@ -2,21 +2,26 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Train Stations</h1>
 
-<table class="table table-striped table-dark">
-    <thead>
+
+<div class="text-center">
+    <h1>Train Stations</h1>
+</div>
+
+<table class="table table-hover table-striped table-">
+    <thead class="custom-thead">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.StationName)
+                Station Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StationAddress)
+                Station Address
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StationLocation)
+                Station Location
             </th>
             
         </tr>
