--- a/TrainStationManagement/Views/TrainStations/Index.cshtml
+++ b/TrainStationManagement/Views/TrainStations/Index.cshtml
@@ -9,19 +9,19 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table table-striped table-dark">
-    <thead>
+<table class="table table-hover table-striped table-light">
+    <thead class="custom-thead">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.StationName)
+                Station Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StationAddress)
+                Station Adress
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StationLocation)
+                Station Location
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
