--- a/TrainStationManagement/Views/Trains/Index.cshtml
+++ b/TrainStationManagement/Views/Trains/Index.cshtml
@@ -10,36 +10,37 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table table-striped table-dark">
-    <thead class="thead-dark">
+<table class="table table-hover table-striped table-light">
+    <thead class="custom-thead">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.DepartureTime)
+                Departure Time
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ArrivalTime)
+                Departure Station
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DepartureStation)
-            </th>
+                Arrival Time
+            </th>  
             <th>
-                @Html.DisplayNameFor(model => model.ArrivalStation)
+                Arrival Station
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.DepartureTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ArrivalTime)
+                @Html.DisplayFor(modelItem => item.DepartureTime.Day)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DepartureStation.StationName)
             </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ArrivalTime)
+            </td>
+            
             <td>
                 @Html.DisplayFor(modelItem => item.ArrivalStation.StationName)
             </td>
